client/src/app/Toolbar.less
:local(.ToolbarContainer) {

  padding: 2px;
  flex: none;

  display: flex;
  flex-direction: row;
  flex-align: left;

  > * {
    margin: 2px 4px;
    display: block;
  }

  > * + * {
    margin-left: 0;
  }

  > .separator {
    background: #CCC;
    width: 1px;
    box-shadow: 0 0 1px #EEE;
    margin-top: 5px;
    margin-bottom: 5px;
  }
}

